Bug 480887 - Suggest .xml extension in file dialog when loading/saving game file
Summary: Suggest .xml extension in file dialog when loading/saving game file
Status: RESOLVED FIXED
Alias: None
Product: ksudoku
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: spmorton
URL: https://invent.kde.org/games/ksudoku/...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-05 10:45 UTC by jean.marc.leger+kde
Modified: 2025-03-22 00:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jean.marc.leger+kde 2024-02-05 10:45:33 UTC
SUMMARY
***
When using the save fame feature, a file dialog appears but does not hint that the saved file will be in XML format (you can only know about it after the fact). It would be nice if the dialog suggested a .xml extension, as well as being able to filter the files already in current folder displayed to .xml (as I frequently save a .txt file along the game with game comments/notes).
***


STEPS TO REPRODUCE
1. Run any game
2. Click the File / Save as... menu option
3. 

OBSERVED RESULT
"Name" field is empty, "Filter" dropdown only offers the default all files pattern (*)

EXPECTED RESULT
"Name" could be initialized using some reasonable default pattern with xml extension, such as  Game_20240205_1139.ksudoku.xml
"Filter" dropdown should allow to restrict browsing to xml game files matching the file extension (filtering out anything else in current folder, e.g. .txt files), as is customary in most apps.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 6.5.0-15-generic (64-bit)
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 spmorton 2025-01-29 02:45:01 UTC
save game doesn't even work on Linux, probably others
Comment 2 spmorton 2025-01-29 03:14:09 UTC
(In reply to spmorton from comment #1)
> save game doesn't even work on Linux, probably others

I retract that statement
Comment 3 Bug Janitor Service 2025-01-31 03:40:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/ksudoku/-/merge_requests/34
Comment 4 Albert Astals Cid 2025-03-22 00:54:50 UTC
Git commit e3a6f884b7d44ba1d87d46b20b7a5e43c93fc6a4 by Albert Astals Cid, on behalf of Scott Morton.
Committed on 22/03/2025 at 00:54.
Pushed by aacid into branch 'master'.

Suggest XML and other filters for save and open game. Also addresses suggested file name

M  +18   -7    src/gui/ksudoku.cpp

https://invent.kde.org/games/ksudoku/-/commit/e3a6f884b7d44ba1d87d46b20b7a5e43c93fc6a4