Suggest XML and other filters for save and open game. Also addresses suggested file name

BUG: 480887